--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+outputs/
+
+.lh/
+.history/
+
+results/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -120,11 +127,11 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+# .env
 .venv
-env/
-venv/
-ENV/
+# env/
+# venv/
+# ENV/
 env.bak/
 venv.bak/
 
